<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/app_title"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/user_input"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:text="@string/user_input"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:textAlignment="textEnd"
        android:gravity="bottom"
        tools:ignore="RtlCompat" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_input">

        <Button
            android:id="@+id/buttonSeven"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/seven"
            android:backgroundTint="@color/primaryColor"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:cornerRadius="100dp"
            android:layout_marginEnd="5dp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/buttonEight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/eight"
            android:backgroundTint="@color/primaryColor"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:cornerRadius="100dp"
            android:layout_marginEnd="5dp"

            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/buttonNine"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/nine"
            android:backgroundTint="@color/primaryColor"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:cornerRadius="100dp"
            android:layout_marginEnd="5dp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/buttonClear"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/secondaryColor"
            android:text="@string/clear"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:cornerRadius="100dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

        <Button
            android:id="@+id/buttonFour"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/four"
            android:backgroundTint="@color/primaryColor"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:cornerRadius="100dp"
            android:layout_marginEnd="5dp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/buttonFive"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/five"
            android:backgroundTint="@color/primaryColor"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:cornerRadius="100dp"
            android:layout_marginEnd="5dp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/buttonSix"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/six"
            android:backgroundTint="@color/primaryColor"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:cornerRadius="100dp"
            android:layout_marginEnd="5dp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/delete"
            android:backgroundTint="@color/secondaryColor"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:cornerRadius="100dp"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Button
            android:id="@+id/buttonOne"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/one"
            android:backgroundTint="@color/primaryColor"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:cornerRadius="100dp"
            android:layout_marginEnd="5dp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/buttonTwo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/two"
            android:backgroundTint="@color/primaryColor"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:cornerRadius="100dp"
            android:layout_marginEnd="5dp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/buttonThree"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/three"
            android:backgroundTint="@color/primaryColor"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:cornerRadius="100dp"
            android:layout_marginEnd="5dp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/buttonSum"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sum"
            android:backgroundTint="@color/secondaryColor"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:cornerRadius="100dp"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <Button
            android:id="@+id/buttonZero"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:text="@string/zero"
            android:backgroundTint="@color/primaryColor"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:cornerRadius="100dp"
            android:layout_marginEnd="5dp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/buttonDot"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dot"
            android:backgroundTint="@color/primaryColor"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:cornerRadius="100dp"
            android:layout_marginEnd="5dp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/buttonEquals"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/equals"
            android:backgroundTint="@color/secondaryColor"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:cornerRadius="100dp"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>